f/src/c/plannerPage/plannerPage.css
div.planner-page i:hover {
    color: rgb(0, 230, 0)
}

div.planner-page-header-2 {
    margin-top:5px;
    margin-bottom: 5px;
    background-color: rgba(48, 48, 100, 0.137);
    display: flex;
    justify-content: center;
    align-items: center;
}

div.planner-page-header-2 span {
    border: 1px solid;
    margin-right: 4px;
    border-radius: 5px;
}

div.planner-body{
    display: flex;
    border: 1px solid;
    border-radius: 10px;
    min-height: 700px;
    min-width: 1500px;
    /* background-color: rgb(30, 23, 36); */
    padding: 4px;
}

div.planner-side-bar{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    position: fixed;
    min-width: 400px;
}

div.planner-content{
    /* border: 1px solid; */
    width: calc(100% - 400px);
    height: 100%;
    translate: 400px;

    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 28px;
    align-content: flex-start;
}

